# sofai_tool

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
Planners/New_PlansformerS1/: mode0.py
Scripts/: FASTDOWNWARD_solve_optimality.sh
db/: experience.json
external_code/: plan_solver.py
gen_data/: 5_2_0.6_80649.pickle  5_2_0.6_91262.pickle  5_3_0.6_12260.pickle  5_3_0.6_52859.pickle  5_3_0.6_60237.pickle  5_3_0.6_85418.pickle  5_4_0.6_26433.pickle  5_4_0.6_29331.pickle  6_3_0.6_33995.pickle  6_3_0.6_35262.pickle  6_3_0.6_52694.pickle  6_3_0.6_53461.pickle  6_3_0.6_68641.pickle  6_3_0.6_83967.pickle  6_4_0.6_20181.pickle  6_4_0.6_22599.pickle  7_4_0.6_18120.pickle  7_4_0.6_25349.pickle  7_4_0.6_32153.pickle  7_4_0.6_3389.pickle  7_4_0.6_53148.pickle  7_4_0.6_68032.pickle  7_5_0.6_15213.pickle  7_5_0.6_17828.pickle
metacognition/: metacognition_module.py  utilities.py
planning_instance/: plan_solver.py  utilities.py
sofai_instances/math-sofai/: README_math.md  math-sofai.py  thresholds.txt
sofai_instances/plan-sofai/: .gitignore  context.txt  output.sas  plan_solver.py  res.tmp  thresholds.txt  utilities_plan.py
sofai_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sofai_tool/metacognition/: metacognition_module.py  mos.py  temp_thresholds.py  utilities.py
sofai_tool/sofai_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sofai_tool/solvers/: __init__.py  solver.py  system1.py
sofai_tool/utils/: __init__.py  visualization.py
solvers/: system1.py
(+66 files in other folders)
